# MCHPRS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  docker.yml
crates/core/: Cargo.toml
crates/core/benches/: chungus.rs  chungus_full.rs
crates/core/src/plot/: commands.rs  mod.rs  monitor.rs  scoreboard.rs
crates/core/src/redpiler/: compile_graph.rs  mod.rs
crates/core/src/redpiler/backend/: common.rs  direct.rs  mod.rs  nodes.rs  parallel.rs  threaded.rs  threading.rs  util.rs
crates/core/src/redpiler/backend/direct/: compile.rs  mod.rs  node.rs  update.rs
crates/core/src/redpiler/backend/threading/: compile.rs  mod.rs  node.rs  tick.rs  update.rs
crates/core/src/redpiler/passes/: analog_repeaters.rs  apply_separators.rs  coalesce.rs  comparator_merge.rs  constant_coalesce.rs  constant_fold.rs  export_graph.rs  identify_nodes.rs  input_search.rs  mod.rs  prune_orphans.rs  scc_seperation.rs  tail_coalesce.rs  unreachable_output.rs
crates/core/src/world/: storage.rs
crates/realtime_channel/: Cargo.toml
crates/realtime_channel/src/: lib.rs
crates/redpiler_graph/src/: lib.rs
crates/redrouter/: Cargo.toml
crates/redrouter/src/: lib.rs  yosys_json.rs
crates/redrouter/test/: counter.blif  counter.json  counter.v  extract.v  mem.blif  mem.json  mem.v  mux.v  redstone_mem.memlib  redstone_std.lib  redstone_std.v  yosys.sh
crates/save_data/src/: plot_data.rs
crates/save_data/src/plot_data/: fixer.rs
crates/world/src/: lib.rs
docs/: Threading.md
src/: main.rs
